--- a/public/tesis.html
+++ b/public/tesis.html
@@ -40,19 +40,8 @@
 	</style>
 </head>
 <body>
-	<header>
-		<div class="logo">Músicos Morelia</div>
-		<nav>
-		  <ul>
-			<li><a href="public/tesis.html">ASCIML</a></li>
-			<li><a href="index.html">Directorio</a></li>
-			<li><a href="nosotros.html">Nosotros</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
-		  </ul>
-		</nav>
-	  </header>
 	<div class="container">
-		<h1>Exploring the potential of interactive Machine Learning for Sound Generation: A preliminary study with sound artists</h1>
+		<h1>ASCIML</h1>
 		<p>Interactive Machine Learning (IML) is an approach previ- ously explored in music discipline [10, 11, 13, 18].
             However, its adaptation in sound synthesis as an algorithmic method of creation has not been examined. 
             This article presents the prototype ASCIML, an Assistant for Sound Creation with Interactive Machine Learning,
@@ -67,19 +56,35 @@
         <div class="results">
 			<!-- Add results dynamically here using server-side scripting language or javascript -->
 			<div class="result">
-				<h2>Result Title</h2>
+				<h2>ASCIML</h2>
 				<p>Result description goes here...</p>
 				<p><a href="#">Link to full result</a></p>
 			</div>
 			<div class="result">
-				<h2>Result Title</h2>
+				<h2>Laboratorios</h2>
 				<p>Result description goes here...</p>
 				<p><a href="#">Link to full result</a></p>
 			</div>
-			<div class="result">
-				<h2>Result Title</h2>
+			<div class="miniaturas">
+				<h2>MINIATURAS</h2>
+				<h3>MINIATURA #1 por Andrés Limón Benítez</h3>
+				<audio controls style="width: 20%; padding: 0.5%">
+					<source src="https://github.com/mezaga/guitar_VAE/raw/main/versiones_viejas/folder/dataset_examples/Neck_6-0.wav">
+				</audio>
 				<p>Result description goes here...</p>
 				<p><a href="#">Link to full result</a></p>
+				<h3>MINIATURA #2 por Kevin Requena</h3>
+				<audio controls style="width: 20%; padding: 0.5%">
+					<source src="https://github.com/mezaga/guitar_VAE/raw/main/versiones_viejas/folder/dataset_examples/Neck_6-0.wav">
+				</audio>
+				<h3>MINIATURA #3 Martín Alonso</h3>
+				<audio controls style="width: 20%; padding: 0.5%">
+					<source src="https://github.com/mezaga/guitar_VAE/raw/main/versiones_viejas/folder/dataset_examples/Neck_6-0.wav">
+				</audio>
+				<h3>MINIATURA #4 Carlos Flores</h3>
+				<audio controls style="width: 20%; padding: 0.5%">
+					<source src="https://github.com/mezaga/guitar_VAE/raw/main/versiones_viejas/folder/dataset_examples/Neck_6-0.wav">
+				</audio>
 			</div>
 		</div>
 	</div>
