--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="result">
 				<h2>Result Title</h2>
 				<p>Result description goes here...</p>
-				<p><a href="#">Link to full result</a></p>
+				<p><a href="/public/tesis.html">Tesis</a></p>
 			</div>
 			<div class="result">
 				<h2>Result Title</h2>
