--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<div class="result">
 				<h2>CONCLUSIONS AND FUTURE WORK</h2>
 				This article highlights the potential of ASCIML as a valuable tool for musicians in creating personalized datasets and generating new sounds. The study found that most participants preferred using microphone recording and synthesis techniques to design their datasets, with a focus on timbre. The data visualizations provided, particularly the Envelopgram, were effective in understanding sound collections. The use of a pre-trained model was found to accelerate the audio reconstruction process. Overall, the study demonstrated that musicians were engaged and benefited from the activity as a valuable learning experience. However, there are areas for improvement, including expanding the model's audio-length reconstruction capabilities, providing more auditory information and interactive visualization within the interface, and conducting a longer study involving participants from diverse backgrounds incorporating the generated sounds into musical contexts
-				<p><a href="tesis.html">Thesis</a></p>
+				<p><a href="public/tesis.html">Thesis</a></p>
 			</div>
 			<div class="result">
 				<h2>REFERENCES</h2>
