--- a/public/tesis.html
+++ b/public/tesis.html
@@ -52,6 +52,16 @@
 			text-justify: inter-word;
 			line-height: 1.5;
 		}
+		.icons {
+			padding: 10px;
+			border: 1px solid #ddd;
+			margin-bottom: 10px;
+			background-color: #fff;
+			box-shadow: 0px 0px 5px rgb(255, 255, 255);
+			text-align: justify;
+			text-justify: inter-word;
+			line-height: 1.5;
+		}
 		.result h2 {
 			margin-top: 0;
 		}
@@ -85,7 +95,10 @@
 			Esta investigación plantea preguntas centrales sobre la posibilidad de generar modelos que ofrezcan resultados sonoros interesantes desde una perspectiva creativa de manera rápida, así como estrategias para agilizar el proceso de aprendizaje automático interactivo. Además, se busca encontrar estrategias que faciliten la generación sencilla de conjuntos de datos, especialmente en la generación de señales. Por último, se explora el aspecto generativo del sistema y cómo los músicos buscan crear nuevos sonidos.
 			
 			Para evaluar estas ideas, se llevó a cabo una revisión exhaustiva del estado del arte del aprendizaje automático interactivo y su aplicación en el ámbito musical, así como de los modelos generativos aplicados a la generación de señales. Además, se desarrolló un prototipo en Google Colab que integra los hallazgos de la revisión del estado del arte. Este prototipo combina diversas tecnologías, como algoritmos para el diseño de conjuntos de datos personalizados, un autocodificador de variación y funciones para la generación de materiales sonoros a partir de la representación latente de los modelos, así como funciones de interacción con el usuario, como una interfaz gráfica, visualizaciones y elementos audiovisuales. Finalmente, se llevaron a cabo tres laboratorios acompañados de una encuesta y se interpretaron los datos obtenidos de dichos ejercicios.</p>
-        <div class="results">
+			<div class="icons">
+				<a title="Tesis" href="#"><img src="book.jpg" alt="tesis" width="20%"> </a>
+			</div>
+			<div class="results">
 			<!-- Add results dynamically here using server-side scripting language or javascript -->
 			<div class="result">
 				<h2><a href="https://colab.research.google.com/github/mezaga/ACIML-prototype/blob/main/ASCIML_prototype_lab.ipynb">El prototipo</a></h2>
